# conan_project_stubs

./: README.md
header_only_package/: CMakeLists.txt  a_project-config.cmake  conanfile.py
package/: CMakeLists.txt  a_project-config.cmake  conanfile.py
